# corosio

./: .clang-format  .clang-tidy  .codecov.yml  .drone.star  .gitignore  .gitleaksignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.adoc  README.md  index.html
.cursor/rules/: awaitable-ops.mdc  doc-awaitable.mdc  portable-headers.mdc  writing-guide.mdc
.drone/: drone.bat  drone.sh
.github/: compilers.json  generate-matrix.py
.github/workflows/: ci.yml  code-coverage.yml  docs.yml
bench/: CMakeLists.txt  bench.cpp  bench.hpp  bench_detail.hpp  bench_support.hpp
bench/asio/: CMakeLists.txt  benchmarks.hpp  http_server_bench.cpp  io_context_bench.cpp  io_context_coro_bench.cpp  main.cpp  socket_latency_bench.cpp  socket_throughput_bench.cpp
bench/callback/: socket.hpp  tls_stream.hpp
bench/callback/detail/: op.hpp
bench/common/: backend_selection.hpp  benchmark.hpp
bench/corosio/: CMakeLists.txt  benchmarks.hpp  http_server_bench.cpp  io_context_bench.cpp  main.cpp  socket_latency_bench.cpp  socket_throughput_bench.cpp
bench/coroutine/: operations.hpp
bench/profile/: CMakeLists.txt  concurrent_io_bench.cpp  coroutine_post_bench.cpp  queue_depth_bench.cpp  scheduler_contention_bench.cpp  small_io_bench.cpp
cmake/: CorosioBuild.cmake  FindWolfSSL.cmake  Findliburing.cmake  boost_corosio-config.cmake.in
context/: allocator.md  asio-io-context.md  coro-first-io.md  design.md  session-fixes-2026-01-20.md  wolfssl.md
context/research/: p0145r3.md
develop/gcovr-linux/: index.buffer_param.hpp.9fa32aed3e21e3bfecc23c12e86aae8f.html  index.cancel.hpp.4b7ab7a7142bc98ab224ef8189c6d75b.html  index.cancel_at_awaitable.hpp.8b1c6bcd0fae2281baa12e2c56d991e5.html  index.conditionally_enabled_event.hpp.55f4d7412fc066f1d6f24c8bb8092c9f.html  index.conditionally_enabled_mutex.hpp.b776cf8fd73bb99d1100558f3b9c1793.html  index.connect.hpp.4b18fdcd064b35e8c4b9afcf705cb8f0.html  index.context.cpp.31fb1279dd54bff360808a88d3d0ae7b.html  index.context_impl.hpp.2858910a506ed277b6b9e302946818fa.html  index.continuation_op.hpp.45fcf1a8b8ed7016669c36477cce22b9.html  index.coro_op.hpp.2dd99468f066e3a6afa57778fcd512b0.html  index.coro_op_complete.hpp.f87ba72e71ab3183c7395145fb330150.html  index.corosio.80a986f30187fd40b6e98d70cf1158f5.html  index.detail.28b3a5c34bfd9f2f42154012b6bbd57e.html  index.detail.758c5aa379d7ea00350e6e791d3f6c49.html  index.detail.a75181c0d392868bc7ab0517310bfc8e.html  index.detail.e9addf03bc19b769521ca765dd3e1168.html  index.dispatch_coro.hpp.4c3fb81766654c945218f91ce0093c44.html  index.endpoint.cpp.cea18beb4a7708484ea5a7a87894850a.html  index.endpoint.hpp.1ccb342d895a11aee228d921682dd0b4.html  index.endpoint_convert.hpp.4418b6b0778633ab97da1a9f24ce0f40.html  index.epoll.a55a8d3775f2da9ba67202c13bfb8ce4.html  index.epoll_scheduler.hpp.0820328bed6125ad28635a6cdbf1fb6a.html  index.epoll_traits.hpp.c5f9f903d2e2e6fe66739a2b40419ed3.html  index.epoll_types.hpp.8347b90fe9c105fa1a19b807d2865f6f.html  index.functions.html  index.html  (+143 more)
doc/: agent-guide.md  antora.yml  build_antora.sh  local-playbook.yml  mrdocs.yml  package-lock.json  package.json  queue.md  scheduler.md
example/: CMakeLists.txt  Jamfile  tls_context_examples.cpp
master/: index.html
perf/: CMakeLists.txt
perf/bench/: CMakeLists.txt  main.cpp  results.md
perf/bench/asio/: benchmarks.hpp  http_server_bench.cpp  io_context_bench.cpp  local_socket_utils.hpp  socket_latency_bench.cpp  socket_throughput_bench.cpp  socket_utils.hpp  unix_socket_utils.hpp
perf/bench/asio/callback/: accept_churn_bench.cpp  benchmarks.hpp  fan_out_bench.cpp  http_server_bench.cpp  io_context_bench.cpp  local_socket_latency_bench.cpp  local_socket_throughput_bench.cpp  socket_latency_bench.cpp  socket_throughput_bench.cpp  timer_bench.cpp  unix_socket_latency_bench.cpp  unix_socket_throughput_bench.cpp
perf/bench/asio/coroutine/: accept_churn_bench.cpp  benchmarks.hpp  fan_out_bench.cpp  http_server_bench.cpp  io_context_bench.cpp  local_socket_latency_bench.cpp  local_socket_throughput_bench.cpp  socket_latency_bench.cpp  socket_throughput_bench.cpp  timer_bench.cpp  unix_socket_latency_bench.cpp  unix_socket_throughput_bench.cpp
perf/bench/common/: benchmark.hpp  http_protocol.hpp  suite.hpp
perf/bench/corosio/: accept_churn_bench.cpp  benchmarks.hpp  fan_out_bench.cpp  http_server_bench.cpp  io_context_bench.cpp  local_socket_latency_bench.cpp  local_socket_throughput_bench.cpp  socket_latency_bench.cpp  socket_throughput_bench.cpp  timer_bench.cpp  unix_socket_latency_bench.cpp  unix_socket_throughput_bench.cpp
perf/common/: backend_selection.hpp  native_includes.hpp  perf.hpp
perf/profile/: concurrent_io_bench.cpp  coroutine_post_bench.cpp  queue_depth_bench.cpp  scheduler_contention_bench.cpp  small_io_bench.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  Jamfile  acceptor.cpp  buffer_param.cpp  cancel.cpp  connect.cpp  consuming_buffers.cpp  context.hpp  cross_ssl_stream.cpp  datagram_paths.cpp  endpoint.cpp  host_name.cpp  io_buffer_param.cpp  io_context.cpp  ipv4_address.cpp  ipv6_address.cpp  local_connect_pair.cpp  local_datagram_socket.cpp  local_endpoint.cpp  local_stream_socket.cpp  local_temp.hpp  openssl_stream.cpp  platform_reactor.cpp  precancel.cpp  random_access_file.cpp  reactor_paths.cpp  read.cpp  resolver.cpp  signal_set.cpp  socket.cpp  socket_option.cpp  socket_stress.cpp  stream_file.cpp  stream_tests.hpp  tcp_acceptor.cpp  tcp_server.cpp  tcp_socket.cpp  test_utils.hpp  thread_pool.cpp  timer.cpp  (+8 more)
test/unit/native/: native_cancel.cpp  native_io.cpp  native_io_context.cpp  native_io_uring_specific.cpp  native_local_datagram_socket.cpp  native_local_stream_socket.cpp  native_random_access_file.cpp  native_resolver.cpp  native_signal_set.cpp  native_stream_file.cpp  native_tcp_acceptor.cpp  native_tcp_socket.cpp  native_timer.cpp  native_udp_socket.cpp
test/unit/native/iocp/: iocp_shutdown.cpp
test/unit/test/: mocket.cpp  socket_pair.cpp
test/unit/tls/: cross_ssl_stream.cpp  openssl_stream.cpp  test_utils.hpp  tls_stream.cpp  wolfssl_stream.cpp
(+1286 files in other folders)
